change the app id

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "app_id" : "com.moodle.moodlemobile",
+    "app_id" : "sd.d2el.elearning",
     "appname": "Moodle Mobile",
     "desktopappname": "Moodle Desktop",
     "versioncode" : 3520,
