--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "moodlemobile",
-  "app_id": "com.moodle.moodlemobile",
+  "app_id": "sd.d2el.elearning",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {},
