--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "chart.js": "^2.7.2",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
+    "eslint": "^5.10.0",
     "font-awesome": "4.7.0",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
