--- a/package.json
+++ b/package.json
@@ -77,8 +77,6 @@
     "@types/node": "^8.0.47",
     "@types/promise.prototype.finally": "^2.0.2",
     "chart.js": "^2.7.2",
-    "cordova-android": "7.0.0",
-    "cordova-ios": "4.5.4",
     "eslint": "^5.10.0",
     "font-awesome": "4.7.0",
     "ionic-angular": "^3.9.2",
@@ -92,13 +90,14 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.9",
+    "@ionic/app-scripts": "^3.2.1",
     "electron-rebuild": "^1.8.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-clip-empty-files": "^0.1.2",
     "gulp-flatten": "^0.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-slash": "^1.1.3",
+    "gulp-util": "^3.0.8",
     "node-loader": "^0.6.0",
     "through": "^2.3.8",
     "typescript": "~2.6.2",
@@ -112,10 +111,7 @@
     "electron": false
   },
   "cordova": {
-    "platforms": [
-      "android",
-      "ios"
-    ]
+    "platforms": []
   },
   "main": "desktop/electron.js",
   "build": {
